examples/test/testpolicy12522.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12522
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key42: value48
      key21: value48
      key7: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
          key44: value12
          key27: value31
      podSelector:
        matchLabels:
          key40: value4
          key21: value44
          key33: value10
